trunk/Archive2/67/56cc8c1cf18e48/output
main.cpp:114:2: error: no matching function for call to object of type 'InnerHandler'
        repeat_until_helper<foo_functor, C, InnerHandler> ()
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:106:7: note: candidate function not viable: no known conversion from 'C' to 'A' for 1st argument
        bool operator() (A) const { return false; }
             ^
1 error generated.
